# recorder

./: .bazelrc  .gitignore  .gitmodules  .travis.yml  BUILD  BUILD.bazel  BUILD.external  CMakeLists.txt  README.md  WORKSPACE  run_format.sh  variables.bzl  variables.bzl.tpl
.github/workflows/: main.yml
cmake/: googletest.cmake
include/: connection.h  message.h
include/async/: future.hpp  future.ipp  future_types.hpp  promise.ipp
include/async/detail/: future_invoker.hpp  future_invoker_base.hpp  future_state_impl.hpp  future_wait_op.hpp
include/compat/: asio.h  endian.h
include/compat/apple/: endian.h
logger/: CMakeLists.txt
reader/: CMakeLists.txt
reader/include/: aux.h  message.h
reader/src/: message.cc  reader.cc
reader/tests/: CMakeLists.txt  test_dummy.cc  test_message.cc
src/: CMakeLists.txt  logger.cc  message.cc  reader.cc
tests/: BUILD  BUILD.bazel  CMakeLists.txt  test_connection.cc  test_message.cc
tests/include/test/: socket.h
